# VideohubController

./: .coveragerc  .gitignore  README.md  app_entry.py  build_and_sign.sh  dmg_settings.py  entitlements.plist  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/: AppIcon.icns
src/videohub_controller/: __init__.py  __main__.py  about_window.py  app.py  connection.py  console_log.py  manual_window.py  presets.py  settings_window.py
tests/: test_connection_reset.py  test_migrations.py  test_module_singletons.py  test_presets.py
